--- a/leqizhong_final_reresubmit/leqi_final/assets/main2.css
+++ b/leqizhong_final_reresubmit/leqi_final/assets/main2.css
@@ -106,6 +106,7 @@ body {
 
 a {
   text-decoration: none;
+  color: #EDEDED;
 }
 
 h1 {
@@ -126,6 +127,15 @@ h1 {
   -webkit-text-stroke: 1px #EDEDED;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.referencetitle {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Verdana, Helvetica, Sans-serif;
+  color: #EDEDED;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 h2 {
